--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE htmnl>
 
 <html>
-<head></head>
+<head>
+	
+	<link rel="stylesheet" type="text/css" href="styles.css">
+</head>
 <body>
-	<img src="noun_Sea_3493902.svg">
+
+	<div id="container">
+	<img  id="logo" src="noun_Sea_3493902.svg">
 	<h1>Comming soon... Marta Roncero</h1>
+</div>
 
 </body>
 
